--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ textarea
 
 article, aside
 {
-	display: inline-block;
+	display: inline-table;
 	margin-top: 25px;
 	padding: 5px;
 	background-color: #9ecaf4;
