--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,8 +319,9 @@ article
 aside
 {
 	text-align: center;
+	margin-top: 75px;
 	background-color: #9cd4ef;
-	position: fixed;
+	position: absolute;
 	margin-left: 75px;
 	width: 215px;
 	border: black thin dashed;
