--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,18 @@ nav ul
 	font-size: 16px;
 }
 
+#asideAccueil
+{
+	text-align: center;
+	margin-top: 75px;
+	background-color: #9cd4ef;
+	position: absolute;
+	width: 215px;
+	border: black thin dashed;
+	min-width: 250px;
+	right: -37px;
+}
+
 .itemMenu
 {
 	text-align:center;
